syntax = "proto3";

package Gitec.InfoServe.Grpc;

import "google/protobuf/timestamp.proto";

service SysDataApiService {
    rpc Heartbeat (G_HeartbeatPing) returns (G_HeartbeatResponse);
    rpc SystemsHealthData (G_ClientHealthData) returns (G_ServiceReply);
}

// Request message for sending client health data
message G_ClientHealthData {
    G_DeviceData device_data = 1;    
    G_ServiceTypeEnum service_type = 2;
    google.protobuf.Timestamp timestamp = 3;
    string json_payload = 4;    
}

// Heartbeat messages
message G_HeartbeatResponse {
    google.protobuf.Timestamp timestamp = 1;
    string message = 2;
}

message G_HeartbeatPing {
    google.protobuf.Timestamp timestamp = 1;
    G_DeviceData device_data = 2;
}

// Response message for client health data
message G_ServiceReply {
    google.protobuf.Timestamp timestamp = 1;
    G_ServiceTypeEnum service_type = 2;
    oneof service_reply {
        G_ServiceReplySuccess success = 3;
        G_ServiceReplyFailure failure = 4;
    }
}

// Success response message
message G_ServiceReplySuccess {
    string message = 1;
    string json_payload = 2;
}

// Failure response message
message G_ServiceReplyFailure {
    string message = 1;
    string error_data = 2;
}

// Enum for different API services
enum G_ServiceTypeEnum {
    SERVICE_TYPE_UNKNOWN = 0;
    APPLICATIONS_API_SERVICE = 1;
    EVENT_LOGS_API_SERVICE = 2;
    HARDWARE_API_SERVICE = 3;
    NETWORK_API_SERVICE = 4;
    POWER_PERFORMANCE_API_SERVICE = 5;
    SECURITY_LOGS_API_SERVICE = 6;
    STORAGE_API_SERVICE = 7;
    GENERAL_API_SERVICE = 8;
}

enum G_DeviceType{
    DEVICE_TYPE_UNKNOWN = 0;
    DESKTOP = 1;
    LAPTOP = 2;
    SERVER = 3;
    MOBILE = 4;
    TABLET = 5;
    PRINTER = 6;
}

// Device data message
message G_DeviceData {
    string device_name = 1;
    string serial_number = 2;
    string ip_address = 3;
}

public enum G_StatusEnum
{
    UNKNOWN = 0;
    SUCCESS = 1;
    FAILURE = 2;
}
