namespace Gitec.InfoServe.Api.Enumerations.grpc
{
    public enum ServiceTypeEnum
    {
        SERVICE_TYPE_UNKNOWN = 0,
        APPLICATIONS_API_SERVICE = 1,
        EVENT_LOGS_API_SERVICE = 2,
        HARDWARE_API_SERVICE = 3,
        NETWORK_API_SERVICE = 4,
        POWER_PERFORMANCE_API_SERVICE = 5,
        SECURITY_LOGS_API_SERVICE = 6,
        STORAGE_API_SERVICE = 7,
        GENERAL_API_SERVICE = 8
    }
}